<resources>
    <string name="app_name">Shop List</string>
    <string name="splash_text">Loading ...</string>
    <string name="title_activity_list">Shopping List</string>
    <string name="action_exit">Exit</string>
    <string name="action_adduser">Add User</string>

    <string name="tab_shoplist">Shop List</string>

    <string name="tab_additem">Item Detail</string>
      <string name="edt_descripton">Description</string>
      <string name="edt_unit">Unit</string>
      <string name="edt_quantity">Quantity</string>
      <string name="edt_brand">Brand</string>

      <string name="hint_descripton">Insert description</string>
      <string name="hint_unit">Insert unit</string>
      <string name="hint_quantity">Insert quantity</string>
      <string name="hint_brand">Insert brand</string>

    <string name="edt_username">Name</string>
    <string name="edt_useremail" translatable="false">E-mail</string>
    <string name="edt_userlatitude" translatable="false">Latitude</string>
    <string name="edt_userlongitude" translatable="false">Longitude</string>

    <string name="hint_username">Johny Be Good</string>
    <string name="hint_useremail">me@company.com</string>
    <string name="hint_userlatitude" translatable="false">22,232130233</string>
    <string name="hint_userlongitude" translatable="false">12,2321556</string>

    <string name="btn_save">Save</string>
    <string name="btn_ok" translatable="false">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_map">Map</string>
    <string name="btn_photo">Photo</string>
    <string name="msg_title">Alert!</string>
    <string name="msg_exit">Are you sure?</string>
    <string name="msg_delete">Are you confirm product exclusion?</string>
    <string name="msg_delete_error">Error on exclude. </string>
    <string name="msg_insert_error">Error on insert. </string>
    <string name="msg_delete_all">Are you confirm all products exclusion?</string>
    <string name="msg_btn_positive">Yes</string>
    <string name="msg_btn_negative">No</string>
    <string name="user_insert">New User Added</string>
    <string name="user_update">User Updated</string>
    <string name="user_delete">User Deleted</string>
    <string name="product_insert">New Product Added</string>
    <string name="product_update">Product Updated</string>
    <string name="product_delete">Product Deleted</string>
    <string name="product_delete_all">All Products Deleted</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_deleteall">Delete All</string>

    <string-array name="unitlist">
        <item>Box</item>
        <item>Package</item>
        <item>Meter</item>
        <item>Kilogram</item>
        <item>Liter</item>
    </string-array>
    <string name="title_activity_user">User</string>

    <string name="action_back">Back</string>
    <string name="title_activity_maps">Map</string>


</resources>
